# myroofgenius-app

./: .dockerignore  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  BUILD_ERRORS.md  BUNDLE_OPTIMIZATION.md  CHANGELOG.md  CLIENT_SERVER_FIXES.md  DEPLOY_CHECKLIST.md  Dockerfile  ESLINT_FIX_LOG.md  FIELD_READY_STATUS.md  FIX_ANALYZE_ROOF.md  IMPLEMENTATION_PLAN.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_QUESTIONS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY_REPORT.md  PULL_REQUEST_TEMPLATE.md  README-CODEX-SETUP.md  README.md  README_CICD.md  SECURITY_AUDIT.md  SETUP.md  SPRINT_FINISH_LINE.md  STATUS_REPORT.md  codex_runner.py  codex_status_check.txt  components.json  jest.config.js  jest.setup.js  jsconfig.json  launch-checklist.md  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md
.next/: app-build-manifest.json  build-manifest.json  react-loadable-manifest.json  routes-manifest.json  trace
api/: subscribe.py
app/: HomeClient.tsx  apple-icon.tsx  error.tsx  globals.css  head.tsx  icon.tsx  layout.jsx  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.jsx  page.tsx  provider.tsx  responsive.css  sitemap.ts  twitter-image.tsx
backend/: Dockerfile  main.py  prompt_service.py  prompts.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/backend/: requirements.txt
backend/services/: ai_analyzer.py  copilot.py  email_service.py  fulfillment.py  search.py
backend/tests/: test_health.py
(+721 files in other folders)
