[project]
name = "myroofgenius-backend"
version = "0.1.0"
description = "FastAPI backend for MyRoofGenius"
authors = [{name = "BrainOps", email = "assistant.communication.mww@gmail.com"}]
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]

[tool.poetry]
# poetry-specific metadata kept minimal for brevity

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
strict = true
